--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,69 @@
     transform: rotate(360deg);
   }
 }
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+#root {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  height: 93vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+button {
+  margin-top: 8px;
+  width: 200px;
+  height: 32px;
+  font-weight: 550;
+  font-size: 15px;
+}
+
+fieldset {
+  border-radius: 5px;
+  background: #fff;
+  border: none;
+  box-shadow: 1px 2px 3px 0px #888;
+}
+
+#result {
+  border: 1px solid;
+  padding: 24px;
+  border-radius: 5px;
+}
+
+.answer {
+  font-family: 'Consolas';
+}
